--- a/random.css
+++ b/random.css
@@ -2,4 +2,10 @@ body {
   background: skyblue;
 }
 
+img {
+  border: solid 5px darkblue;
+  border-radius: 50px;
+  max-width: 500px;
+  max-height: 500px;
+}
 
